syntax = "proto3";

package strata.bitvm2.p2p.v1;

import "strata/bitvm2/p2p/v1/gossipsub.proto";

message DepositRequestKey {
  // 32-byte hash.
  bytes scope = 1;
  // Public key of target operator.
  bytes operator = 2;
}

message Musig2ExchangeRequestKey {
  // 32-byte hash.
  bytes session_id = 1;
  // Public key of target operator.
  bytes operator = 2;
}

message GenesisRequestKey {
  // Public key of target operator.
  bytes operator = 1;
}

message Wots32RequestKey {
  // 32-byte hash (primary identifier).
  bytes session_id = 1;
  // Public key of target operator.
  bytes operator = 2;
  // Secondary identifier.
  uint32 wots_id = 3;
}

// Used for hash elements.
message Wots160RequestKey {
  // 32-byte hash.
  bytes session_id = 1;
  // Public key of target operator.
  bytes operator = 2;
  // Secondary identifier.
  uint32 wots_id = 3;
}

// Used for field elements and public inputs.
message Wots256RequestKey {
  // 32-byte hash
  bytes session_id = 1;
  // Public key of target operator.
  bytes operator = 2;
  // Secondary identifier.
  uint32 wots_id = 3;
}

message GetMessageRequest {
  oneof body {
    DepositRequestKey deposit_setup = 1;
    Musig2ExchangeRequestKey nonces = 2;
    Musig2ExchangeRequestKey sigs = 3;
    GenesisRequestKey genesis_info = 4;
    Wots32RequestKey wots_32_key = 5;
    Wots160RequestKey wots_160_key = 6;
    Wots256RequestKey wots_256_key = 7;
  }
}

message GetMessageRequestBatch {
  repeated GetMessageRequest requests = 1;
}

message GetMessageResponse {
  repeated GossipsubMsg msg = 1;
}
